--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-pypdf2 = "*"
-docx = "*"
-nltk = "*"
+python-docx = "==0.8.9"
+nltk = "==3.4"
+PyPDF2 = "==1.26.0"
 
 [requires]
 python_version = "3.7"
