Implement TF-IDF ranged search

--- a/sparksearch/src/main/resources/log4j.properties
+++ b/sparksearch/src/main/resources/log4j.properties
@@ -5,10 +5,11 @@ log4j.rootLogger=INFO,StdoutErrorFatal,StdoutWarn,StdoutInfo,StdoutDebug,StdoutT
 log4j.logger.org.apache.spark.ContextCleaner=WARN
 log4j.logger.org.apache.parquet=WARN
 log4j.logger.org.apache.spark.scheduler=WARN
-log4j.logger.org.apache.spark.storage=WARN
+log4j.logger.org.apache.spark.storage=ERROR
 log4j.logger.org.apache.spark.executor=WARN
 log4j.logger.org.apache.spark.SparkContext=WARN
-log4j.logger.org.apache.spark.sql.catalyst=WARN
+log4j.logger.org.apache.spark.sql=ERROR
+log4j.logger.org.apache.hadoop.hdfs.server=ERROR
 
 log4j.logger.org.apache.spark.sql.execution.datasources=WARN
 log4j.logger.org.apache.spark.ml.util.Instrumentation=WARN
